master-depls/00-supervision/k8s-config/manifests/15-dynamic-traefik-static-routes/routes/00-supervision-prometheus-coab-ingressroutetcp.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: routingmap-prometheus-coab
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`prometheus-dedicated.((/secrets/cloudfoundry_ops_domain))`)
      services:
        - name: supervision-vip
          namespace: 15-dynamic-static-routes-ns #namespace created by 00-core-connectivity
          port: 443
  tls:
    passthrough: true
